# liber

./: Cargo.toml  README.md  config.h  content.go  content_test.go  epub.go  go.mod  go.sum  metadata.go
body/: body.go
examples/: async.rs  basic.go  basic.rs
examples/basic/: main.go
examples/custom/: main.go
examples/custom/files/: ch1.xhtml
examples/files/: chapter1.xhtml  style.css
ident/: identifier.go
internal/epub/: content.go  content_reference.go  epub.go  metadata.go
internal/output/: creator.go
internal/output/files/: file_content.go  format.go  format_test.go
internal/output/files/parser/: parser.go  parser_test.go
lang/: language.go
reftype/: reftype.go
resource/: resource.go
src/: epub.rs  lib.rs  metadata.rs
src/epub/: content.rs  content_reference.rs  epub_builder.rs  metadata.rs  mod.rs  resource.rs  stylesheet.rs
src/output/: content.rs  creator.rs  creator_async.rs  file_content.rs  mod.rs  xhtml.rs  xml.rs  zip.rs
