[package]
name = "liber"
version = "0.1.0"
edition = "2024"
description = "Rust library for creating EPUB 2.1 files"
authors = ["Javier Orfo <javierorfo@protonmail.com>"]
license = "MIT"
repository = "https://github.com/javiorfo/liber"
homepage = "https://github.com/javiorfo/liber#readme"
keywords = ["epub", "epub2", "epub-generator", "epub-creator", "epub-async"]

[lib]
name = "liber"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0.12"
