[package]
name = "liber"
version = "0.1.0"
edition = "2024"
description = "Rust library for creating EPUB 2.0.1 files"
authors = ["Javier Orfo <javierorfo@protonmail.com>"]
license = "MIT"
repository = "https://github.com/javiorfo/liber"
homepage = "https://github.com/javiorfo/liber#readme"
keywords = ["epub", "epub2", "epub-generator", "epub-creator", "epub-async"]

[lib]
name = "liber"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.42"
thiserror = "2.0.12"
uuid = { version = "1.18.1", features = ["v4"] }
zip = "5.1.1"

[dev-dependencies]
tempfile = "3.23.0"
